--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,8 +1,10 @@
-# Choose which block should be
-# a lucky block
+# Choose your lucky block
+# default 19 (Sponge)
 luckyblock-id: 19
 
 # Choose how big should be
 # the unlucky explosion
 explosion-min: 1
 explosion-max: 3
+
+needed-players: 4
