--- a/resources/config.yml
+++ b/resources/config.yml
@@ -7,4 +7,6 @@ luckyblock-id: 19
 explosion-min: 1
 explosion-max: 3
 
+# Choose how many players are required
+# to start the game
 needed-players: 4
