--- a/resources/config.yml
+++ b/resources/config.yml
@@ -16,6 +16,10 @@ needed-players: 4
 # You can also use colors
 wait-popup: "§6Waiting for players..."
 
+# Message will be send if the game
+# is not running
+game-is-not-running: "§cYou can not break Lucky Blocks while you are not in a game!"
+
 # Will be send to a player if he
 # have not the permission to
 # use a lucky block
