--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -1,11 +1,16 @@
 # Messages file for Lucky Block Wars
+# You can also use colors using §
 
 # Popup will be send while waiting
 # for other players
-# You can also use colors using §
 wait-popup: "§6Waiting for players..."
 
 # Message will be send if the game
 # is not running and you're trying to break
 # a Lucky Block
 game-is-not-running: "§cYou can not break Lucky Blocks while you are not in a game!"
+
+# Will be send to a player if he
+# have not the permission to
+# use a lucky block
+not-allowed-to-use-luckyblock: "§cYou are not allowed to use Lucky Blocks!"
