--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -7,6 +7,7 @@ wait-popup: "§6Waiting for players..."
 
 # Will be send to all players
 # while their are in a game
+# {players} are the number of players
 status-popup: "§2Players left: §l{players}"
 
 # Message will be send if the game
