--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -1,5 +1,6 @@
 # Messages file for Lucky Block Wars
-# You can also use colors using §
+# You can also use formatting codes using §
+# http://minecraft.gamepedia.com/Formatting_codes
 
 # Popup will be send while waiting
 # for other players
